# magi-control-plane

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  qa-live.yml  release.yml
_devdb/: cloud.sqlite-shm  cloud.sqlite-wal
charts/magi-cp/: Chart.yaml  values.yaml
charts/magi-cp/examples/: cert-manager-issuer.yaml  production-values.yaml
charts/magi-cp/templates/: _helpers.tpl  deployment.yaml  networkpolicy.yaml  service.yaml
deploy/: fly.toml
docs/: 2026-06-19-magi-agent-customize-delta.md  2026-06-19-v1-build-plan.md  api.md  architecture.md  clawy-integration.md  cli.md  design-partner-onepager.md  getting-started.md  install.md  operator.md  policy-ir.md  quickstart.md  run-share-deploy-checklist.md  runtimes.md  session-evidence-threat-model.md  session-evidence.md  share-runs.md  troubleshooting.md  tutorial.md  verifiers.md
docs/plans/: 2026-06-21-dashboard-console-shell.md  2026-06-24-run-share-link-design.md  2026-06-30-codex-live-test-checklist.md  2026-06-30-codex-runtime-adapter-design.md  2026-06-30-pack-centric-session-scoped-runtime.md  2026-07-01-codex-permission-native-lowering-design.md  2026-07-03-cloud-app-modularization-design.md  2026-07-03-pack-policy-rule-model.md  2026-07-03-session-evidence-trust-redesign.md  2026-07-03-sessionstart-auto-pack-activation-design.md
docs/workflows/: final-smoke-template.md
plugin/: managed-settings.json  plugin.json
plugin/mcp/: server-config.json
plugin/skills/share/: SKILL.md
scripts/: backup.sh  deploy-alpha.sh  install-plugin.sh  local-e2e-setup.sh  local-e2e-smoke.sh  magi-gate.sh  migrate_p8_stamp_enforcement.py  migrate_pr3_backfill.py  migrate_pr4_drop_legacy.py  quickstart.sh  run-e2e-from-workflow.sh  smoke-test.sh  smoke_live_llm.py
scripts/qa/: gen_phrasings.py  record.py  run_live.py
spike/: M5-DEMO.md  README.md  b0_fp_stress.py  b1_live.py  b1_parser_check.py  build.sh  check-perms.sh  cloud_signer.py  install.sh  local_gate.py  m3_demo.py  m4_demo.py  magi-gate.sh  make-evidence.sh  managed-settings.json  policy_ir.py  verify_citations.py
spike/policies/: legal_filing_v1.json
src/magi_cp/: config.py
src/magi_cp/cli/: __main__.py  keys.py  share.py
src/magi_cp/cloud/: __init__.py  app.py  codex_runtime_migration.py  composio_key_store.py  constants.py  db.py  deps.py  (+19 more)
tests/: conftest.py  test_admin_composio_key.py  test_admin_hmac.py  test_admin_llm_keys.py  test_admin_revoke_scope.py  test_admin_sessions_and_pack_membership.py  test_admin_tenants_api.py  test_boot_migration_advisory_lock.py  test_boot_tolerates_unconfigured_llm.py  test_builtin_verifiers.py  test_catalog_routes.py  test_cc_driver_passthrough.py  test_check_evidence_routes.py  test_claude_cli_provider.py  test_claude_code_view.py  test_cloud_app.py  test_cloud_composio_key_store.py  test_cloud_db.py  test_cloud_keys.py  test_cloud_llm_key_store.py  test_codex_coverage_golden.py  test_codex_driver_roundtrip.py  test_codex_event_not_live.py  test_codex_install.py  test_codex_runtime_dashboard_p4.py  test_codex_session_end_sweeper.py  test_codex_shims.py  test_codex_toml_emitter.py  test_compile_context.py  test_compile_interactive.py  test_compiler_hybrid.py  test_compound_endpoint.py  test_compound_policy.py  test_context_write_cli.py  test_custom_verifiers.py  test_custom_verifiers_api.py  test_descriptor_lifecycle_endorsement.py  test_detect_runtime.py  test_dockerfile_store_pins.py  test_e2e.py  (+102 more)
tests/e2e/: README.md  global-setup.ts  global-teardown.ts  package.json  playwright.config.ts  tsconfig.json
tests/goldens/: codex_coverage_report_golden.json  gjc_coverage_report_golden.json
tests/qa_corpus/: README.md  baseline.json
tests/qa_harness/: __init__.py  answerer.py  cassette.py  corpus.py  oracles.py  report.py  runner.py  strategies.py
web/: Dockerfile  middleware.ts  next.config.mjs  node_modules  package-lock.json  package.json  postcss.config.mjs  vitest.config.mts
web/app/: a11y-gate.test.ts  globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
web/components/: PolicyBuilder.tsx  SubmitButton.tsx
web/lib/: cc-tools.test.ts  cc-tools.ts  cloud.test.ts  cloud.ts  cn.ts  dashboard-auth.test.ts  dashboard-auth.ts  docs.test.ts  docs.ts  env-reference.test.ts  env-reference.ts  evidence-gate-builder.test.ts  evidence-gate-builder.ts  flash.test.ts  flash.ts  format.test.ts  format.ts  ledger-url.test.ts  ledger-url.ts  pack-centric.ts  payload-schemas.display-label.test.ts  payload-schemas.test.ts  payload-schemas.ts  payload-steering.test.ts  payload-steering.ts  policy-builder.test.ts  policy-builder.ts  policy-id.test.ts  policy-id.ts  run-view-format.test.ts  run-view-format.ts  runtime-manifest.test.ts  runtime-manifest.ts  runtime-name.ts  same-origin.test.ts  same-origin.ts  synthetic-payloads.test.ts  synthetic-payloads.ts  verifier-descriptors.test.ts  verifier-descriptors.ts
web/public/: install.sh
web/scripts/: check-ds-drift.mjs
(+558 files in other folders)
