[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magi-cp"
version = "0.0.1"
description = "magi-control-plane — agent-governance control plane (alpha)"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=42",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2",
  "sqlalchemy>=2",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.4"]
nli = ["transformers>=4.40", "torch>=2.2"]

[project.scripts]
magi-cp                = "magi_cp.cli.__main__:main"
magi-cp-gate           = "magi_cp.local.gate:cli"
magi-cp-emit           = "magi_cp.local.emit:cli"
magi-cp-await-approval = "magi_cp.local.emit:await_approval_cli"
magi-cp-mcp            = "magi_cp.mcp.server:main"
magi-cp-cloud          = "magi_cp.cloud.app:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "network: requires live HTTP (law.go.kr) — skipped by `make test-quick`",
]

[tool.ruff]
line-length = 110
target-version = "py311"
