[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magi-cp"
version = "0.0.1"
description = "magi-control-plane — agent-governance control plane (alpha)"
requires-python = ">=3.11"
dependencies = [
  # Upper bounds block a surprise next-major landing at build time (SUPPLY-1).
  # The exact resolved versions are pinned by uv.lock; these ceilings are the
  # human-facing "known-compatible" range. Bump deliberately with a lock update.
  "cryptography>=42,<50",
  "fastapi>=0.110,<1",
  "uvicorn[standard]>=0.27,<1",
  "pydantic>=2,<3",
  "sqlalchemy>=2,<3",
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.4", "mypy>=1.10"]
nli = ["transformers>=4.40", "torch>=2.2"]
# v2.0-W8a: Postgres driver for multi-node / HA deploys. SQLite is the default
# single-node DSN; install with `pip install -e .[postgres]` to switch.
postgres = ["psycopg2-binary>=2.9"]
# v2.0-W8b: production observability (structured logs + Prometheus metrics).
observability = ["structlog>=24", "prometheus-client>=0.20"]

[project.scripts]
magi-cp                = "magi_cp.cli.__main__:main"
magi-cp-gate           = "magi_cp.local.gate:cli"
magi-cp-heartbeat      = "magi_cp.local.gate:heartbeat_cli"
magi-cp-context-write  = "magi_cp.local.gate:context_write_cli"
magi-cp-input-rewrite  = "magi_cp.local.gate:input_rewrite_cli"
magi-cp-run-command    = "magi_cp.local.gate:run_command_cli"
magi-cp-emit           = "magi_cp.local.emit:cli"
magi-cp-await-approval = "magi_cp.local.emit:await_approval_cli"
magi-cp-session-audit  = "magi_cp.local.session_audit:cli"
magi-cp-session-gate   = "magi_cp.local.session_gate:cli"
magi-cp-mcp            = "magi_cp.mcp.server:main"
magi-cp-cloud          = "magi_cp.cloud.app:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
norecursedirs = [
    "tests/e2e/node_modules",
    "tests/e2e/.report",
    "tests/e2e/playwright-report",
    ".venv",
    "node_modules",
    "web/node_modules",
]
markers = [
    "network: requires live HTTP (law.go.kr), skipped by `make test-quick`",
]

[tool.ruff]
line-length = 110
target-version = "py311"
